--- a/axis/docs/axis/axis-bibliography.bib
+++ b/axis/docs/axis/axis-bibliography.bib
@@ -1,5 +1,5 @@
 
-@article{winer:xmlrpc,
+@misc{winer:xmlrpc,
     title="{XML-RPC}",
     author="Dave Winer",
     year=2000,
@@ -19,7 +19,7 @@
     }
 
 @inproceedings{indiana:soap-limits,
-    title="Investigating the Limits of {SOAP} Performance for Scientific Computing"
+    title="Investigating the Limits of {SOAP} Performance for Scientific Computing",
     author="Kenneth Chiu and Madhusudhan Govindaraju and Randall Bramley",
     booktitle="Proceedings of HPDC 2002",
     year=2002,
@@ -30,8 +30,8 @@
     title="To infinity and beyond - the quest for {SOAP} interoperability",
     author="Sam Ruby",
     year=2002,
-    url="http://radio.weblogs.com/0101679/stories/2002/02/01/toInfinityAndBeyondTheQuestForSoapInteroperability.html",
-    note="\href{http://radio.weblogs.com/0101679/stories/2002/02/01/toInfinityAndBeyondTheQuestForSoapInteroperability.html}{http://radio.weblogs.com/0101679/stories/2002/02/01/toInfinityAndBeyondTheQuestForSoapInteroperability.html}"
+    url="http://www.intertwingly.net/stories/2002/02/01/toInfinityAndBeyondTheQuestForSoapInteroperability.html",
+    note="\href{http://www.intertwingly.net/stories/2002/02/01/toInfinityAndBeyondTheQuestForSoapInteroperability.html}{http://www.intertwingly.net/stories/2002/02/01/toInfinityAndBeyondTheQuestForSoapInteroperability.html}"
     }
     
 @misc{ruby:gump,
@@ -45,18 +45,17 @@
     title="A Busy Developer's Guide to {WSDL 1.1}",
     author="Sam Ruby",
     year=2002,
-    url="http://radio.weblogs.com/0101679/stories/2002/02/15/aBusyDevelopersGuideToWsdl11.html"
+    url="http://www.intertwingly.net/stories/2002/02/15/aBusyDevelopersGuideToWsdl11.html"
     }
 
 @misc{ruby:soap-intro,
     title="A Gentle Introduction to {SOAP}",
     author="Sam Ruby",
     year=2002,
-    url="http://radio.weblogs.com/0101679/stories/2002/03/16/aGentleIntroductionToSoap.html"
+    url="http://www.intertwingly.net/stories/2002/03/16/aGentleIntroductionToSoap.html"
     }
     
-    
-         
+
 @techreport{spec:SOAP1.1,
     title="{SOAP} Version 1.1",
     institution="W3C",
@@ -86,7 +85,7 @@
     }
 
 @manual{spec:WXS,
-    title="XML Schema Part 0: Primer",
+    title="{XML Schema Part 0: Primer}",
     year="2001",
     author="David Fallside and others",
     institution="W3C",
@@ -97,12 +96,13 @@
     title="{Apache Axis}",
     year="2001",
     url="http://xml.apache.org/axis/",
-    institution="Apache"
+    institution="Apache",
+    author="Apache"
     }
     
 @techreport{ietf:rfc2616,
     title="{RFC 2616: Hypertext Transfer Protocol -- HTTP/1.1}",
-    author="Fielding, R.,  Gettys, J., Mogul, J., Frysyk, H., Masinter, L., Leach, P. and Berners-Lee, T.",
+    author="Fielding, R. and  Gettys, J. and Mogul, J. and Frysyk, H. and Masinter, L. and Leach, P. and Berners-Lee, T.",
     institution="IETF",
     url="http://ietf.org/rfc/rfc2616.txt"
     }    
@@ -128,8 +128,31 @@
     institution="Java Community Process", 
     title="{JAX-RPC} Specification",
     edition="1.0",
+    author="Sun Microsystems",
     note="\href{http://java.sun.com/xml/downloads/jaxrpc.html}{http://java.sun.com/xml/downloads/jaxrpc.html}",
     url="http://java.sun.com/xml/downloads/jaxrpc.html"
     }
 
+@misc{tag:webarch,
+    title="Architectural Principles of the World Wide Web",
+    institution="W3C",
+    year=2002,
+    author="Ian Jacobs"
+    }
+
+
+@techreport{spec:dime,
+    title="{WS-Attachments}",
+    author="Henrik Frystyk Nielsen and Erik Christensen and Joel Farrell",
+    year="2002",
+    institution="IETF",
+    url="http://www.ietf.org/internet-drafts/draft-nielsen-dime-soap-01.txt"
+    }
     
+@techreport{spec:swa,
+    title="{SOAP Messages with Attachments}",
+    author="John J. Barton and Satish Thatte and Henrik Frystyk Nielsen",
+    year="2000",
+    institution="W3C",
+    url="http://www.w3.org/TR/2000/NOTE-SOAP-attachments-20001211",
+    }        
