Fixed bug in VOTable parsing (empty float/double TD elements were causing an index out of bounds exception).

--- a/topcat/src/docs/changes
+++ b/topcat/src/docs/changes
@@ -57,3 +57,7 @@ V1.3.
 V1.3-1
  - Added Starlink logo to all windows at PTW's suggestion
  - Added 2MASS cutout servers to activation window
+V1.3-2
+ - Fixed VOTable bug in reading empty TD elements (float, double)
+
+Loading changed - asynchronous, MySpace available, paste text into table list.
