--- a/README
+++ b/README
@@ -5,13 +5,13 @@
    Prerequisites
    -------------
 
-First make sure you have a J2SE SDK available. Downloads are available from:
+First make sure you have a 1.4.x J2SE SDK available. Downloads are available from:
 
    http://java.sun.com/
 
-Currently all development is performed using version 1.4.x. The current plans
-are to look at moving to 1.5 sometime during 2005. Note we cannot distribute
-the SDK for licensing reasons.
+Currently all development is performed using version 1.4.x and the system is
+known not to build using 1.5. The current plans are to look at moving to 1.5
+sometime during 2005. Note we cannot distribute the SDK for licensing reasons.
 
 You will also need to have JAI installed as part of the SDK. JAI is the "Java
 Advanced Imaging API" which is currently part of SUNs "Desktop Java". The
